methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def hunt() : {while estSurBiscuit == false {
              ^